--- a/.env
+++ b/.env
@@ -47,14 +47,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_MAILER=log
+# MAIL_SCHEME=null
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com # Ou votre service SMTP
+MAIL_PORT=587
+MAIL_USERNAME=camille35599@gmail.com
+MAIL_PASSWORD=gbgewpuyqpmtudrd
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=camille35599@gmail.com
+MAIL_FROM_NAME="CS Ops"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
