--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^2.0.8",
         "@vitejs/plugin-vue": "^5.2.3",
         "vue": "^3.5.13",
